# CPFcluster

./: .gitignore  Code Example.py  README.md  __init__.py  core.py  demo_cpf_visualize.py  demo_pyo3.py  official_demo.py  official_demo_pyo3.py  pyproject.toml  requirements.txt  simple_demo.py
Spatial-CPF/: Code_Example_Geo.py  __init__.py  core_Geo.py  create_neighbor_adjacency_matrix.py  utils.py
rust/: Cargo.toml  justfile
rust-pyo3/: Cargo.toml  pyproject.toml
rust-pyo3/src/: lib.rs
rust/src/: lib.rs  metrics.rs
rust/src/app/: mod.rs
rust/src/core/: assignment.rs  big_brother.rs  center_selection.rs  peak_score.rs
rust/src/graph/: adjacency.rs  components.rs  knn.rs  mod.rs
rust/src/vis/: mod.rs
rust/tests/: core.rs  graph.rs  regression.rs
src/: __init__.py  cpf.py  plotting.py  types.py
src/core/: __init__.py  big_brother.py  density.py  peak_score.py
src/graph/: __init__.py  adjacency.py  components.py  knn.py
temp/: workdoc_Feb2-2026_refactoring.md
tests/: __init__.py  test_core.py  test_cpf_parity.py  test_cpf_regression.py  test_graph.py  test_graph_knn.py  test_pyo3_regression.py
