[project]
name = "cpfcluster"
version = "0.1.0"
description = "Component-wise Peak-Finding clustering algorithm"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "umap-learn>=0.5.5",
    "faiss-cpu",
    "numba>=0.58",
    "llvmlite>=0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:faiss",
    "ignore::RuntimeWarning:numpy",
]
