[project]
name = "cpfcluster"
version = "0.1.0"
description = "Component-wise Peak-Finding clustering algorithm"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "umap-learn>=0.5.5",
    "faiss-cpu>=1.9.0",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "radon>=6.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:faiss",
    "ignore::RuntimeWarning:numpy",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
