[package]
name = "cpfcluster-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of the Component-wise Peak-Finding (CPF) clustering algorithm."

[lib]
name = "cpfcluster_rs"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
plotters = "0.3.5"
kdtree = "0.8.0"
rayon = "1.11.0"

[dev-dependencies]
approx = "0.5.1"
